--- a/package.json
+++ b/package.json
@@ -12,13 +12,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0",
+    "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
     "@angular/core": "~9.0.0",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.0.0",
+    "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@mdi/font": "^5.0.45",
+    "angular-x-image-viewer": "^2.0.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "ngx-highlightjs": "^4.1.0-beta",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
