--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.0.0",
     "@mdi/font": "^5.0.45",
     "angular-x-image-viewer": "^2.0.1",
+    "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0-rc.2",
