--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,9 @@
 
               "./node_modules/jquery/dist/jquery.js",
               "./node_modules/materialize-css/dist/js/materialize.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/ace-builds/src-min/ace.js",
+              "./node_modules/ace-builds/src-min/theme-eclipse.js"
             ]
           },
           "configurations": {
