--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0-rc.2",
+    "ng2-ace-editor": "^0.3.9",
     "ngx-highlightjs": "^4.1.0-beta",
+    "ngx-quill": "^8.1.3",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -38,9 +41,9 @@
     "@angular/cli": "~9.0.1",
     "@angular/compiler-cli": "~9.0.0",
     "@angular/language-service": "~9.0.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -52,6 +55,7 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "webpack-cli": "^3.3.11"
   }
 }
